ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/XParser.java
// $ANTLR 3.5.2 /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g 2017-06-12 11:11:31
package de.dhbw.compiler.antlrxtreegrammar;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class XParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "DECL", "DECLLIST", 
		"DIGIT", "FLOATCONST", "ID", "INTCONST", "INVALID", "LETTER", "OTHER", 
		"POSDIGIT", "STATLIST", "STRINGCONST", "UMINUS", "WS", "ZERO", "'('", 
		"')'", "'*'", "'+'", "'-'", "'.'", "'/'", "':'", "':='", "';'", "'<'", 
		"'='", "'>'", "'begin'", "'else'", "'end'", "'float'", "'for'", "'if'", 
		"'int'", "'print'", "'program'", "'read'", "'string'", "'then'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int COMMENT=4;
	public static final int DECL=5;
	public static final int DECLLIST=6;
	public static final int DIGIT=7;
	public static final int FLOATCONST=8;
	public static final int ID=9;
	public static final int INTCONST=10;
	public static final int INVALID=11;
	public static final int LETTER=12;
	public static final int OTHER=13;
	public static final int POSDIGIT=14;
	public static final int STATLIST=15;
	public static final int STRINGCONST=16;
	public static final int UMINUS=17;
	public static final int WS=18;
	public static final int ZERO=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public XParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public XParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return XParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g"; }


	public static class decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:1: decl : ( ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type) | 'read' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'read' ) | 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'print' ) | 'read' 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'read' 'print' ) );
	public final XParser.decl_return decl() throws RecognitionException {
		XParser.decl_return retval = new XParser.decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token type=null;
		Token ID1=null;
		Token char_literal2=null;
		Token char_literal3=null;
		Token string_literal4=null;
		Token ID5=null;
		Token char_literal6=null;
		Token char_literal7=null;
		Token string_literal8=null;
		Token ID9=null;
		Token char_literal10=null;
		Token char_literal11=null;
		Token string_literal12=null;
		Token string_literal13=null;
		Token ID14=null;
		Token char_literal15=null;
		Token char_literal16=null;

		CommonTree type_tree=null;
		CommonTree ID1_tree=null;
		CommonTree char_literal2_tree=null;
		CommonTree char_literal3_tree=null;
		CommonTree string_literal4_tree=null;
		CommonTree ID5_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal7_tree=null;
		CommonTree string_literal8_tree=null;
		CommonTree ID9_tree=null;
		CommonTree char_literal10_tree=null;
		CommonTree char_literal11_tree=null;
		CommonTree string_literal12_tree=null;
		CommonTree string_literal13_tree=null;
		CommonTree ID14_tree=null;
		CommonTree char_literal15_tree=null;
		CommonTree char_literal16_tree=null;
		RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
		RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
		RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
		RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");

		try {
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:5: ( ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type) | 'read' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'read' ) | 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'print' ) | 'read' 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';' -> ^( DECL ID $type 'read' 'print' ) )
			int alt5=4;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt5=1;
				}
				break;
			case 42:
				{
				int LA5_2 = input.LA(2);
				if ( (LA5_2==ID) ) {
					alt5=2;
				}
				else if ( (LA5_2==40) ) {
					alt5=4;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 40:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:14: ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';'
					{
					ID1=(Token)match(input,ID,FOLLOW_ID_in_decl396);  
					stream_ID.add(ID1);

					char_literal2=(Token)match(input,27,FOLLOW_27_in_decl398);  
					stream_27.add(char_literal2);

					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:21: (type= 'int' |type= 'float' |type= 'string' )
					int alt1=3;
					switch ( input.LA(1) ) {
					case 39:
						{
						alt1=1;
						}
						break;
					case 36:
						{
						alt1=2;
						}
						break;
					case 43:
						{
						alt1=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}
					switch (alt1) {
						case 1 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:22: type= 'int'
							{
							type=(Token)match(input,39,FOLLOW_39_in_decl403);  
							stream_39.add(type);

							}
							break;
						case 2 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:35: type= 'float'
							{
							type=(Token)match(input,36,FOLLOW_36_in_decl409);  
							stream_36.add(type);

							}
							break;
						case 3 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:50: type= 'string'
							{
							type=(Token)match(input,43,FOLLOW_43_in_decl415);  
							stream_43.add(type);

							}
							break;

					}

					char_literal3=(Token)match(input,29,FOLLOW_29_in_decl418);  
					stream_29.add(char_literal3);

					// AST REWRITE
					// elements: type, ID
					// token labels: type
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 55:69: -> ^( DECL ID $type)
					{
						// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:55:72: ^( DECL ID $type)
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_type.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:14: 'read' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';'
					{
					string_literal4=(Token)match(input,42,FOLLOW_42_in_decl444);  
					stream_42.add(string_literal4);

					ID5=(Token)match(input,ID,FOLLOW_ID_in_decl446);  
					stream_ID.add(ID5);

					char_literal6=(Token)match(input,27,FOLLOW_27_in_decl448);  
					stream_27.add(char_literal6);

					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:28: (type= 'int' |type= 'float' |type= 'string' )
					int alt2=3;
					switch ( input.LA(1) ) {
					case 39:
						{
						alt2=1;
						}
						break;
					case 36:
						{
						alt2=2;
						}
						break;
					case 43:
						{
						alt2=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 2, 0, input);
						throw nvae;
					}
					switch (alt2) {
						case 1 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:29: type= 'int'
							{
							type=(Token)match(input,39,FOLLOW_39_in_decl453);  
							stream_39.add(type);

							}
							break;
						case 2 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:42: type= 'float'
							{
							type=(Token)match(input,36,FOLLOW_36_in_decl459);  
							stream_36.add(type);

							}
							break;
						case 3 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:57: type= 'string'
							{
							type=(Token)match(input,43,FOLLOW_43_in_decl465);  
							stream_43.add(type);

							}
							break;

					}

					char_literal7=(Token)match(input,29,FOLLOW_29_in_decl468);  
					stream_29.add(char_literal7);

					// AST REWRITE
					// elements: ID, 42, type
					// token labels: type
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 56:76: -> ^( DECL ID $type 'read' )
					{
						// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:56:79: ^( DECL ID $type 'read' )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_type.nextNode());
						adaptor.addChild(root_1, stream_42.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:14: 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';'
					{
					string_literal8=(Token)match(input,40,FOLLOW_40_in_decl496);  
					stream_40.add(string_literal8);

					ID9=(Token)match(input,ID,FOLLOW_ID_in_decl498);  
					stream_ID.add(ID9);

					char_literal10=(Token)match(input,27,FOLLOW_27_in_decl500);  
					stream_27.add(char_literal10);

					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:29: (type= 'int' |type= 'float' |type= 'string' )
					int alt3=3;
					switch ( input.LA(1) ) {
					case 39:
						{
						alt3=1;
						}
						break;
					case 36:
						{
						alt3=2;
						}
						break;
					case 43:
						{
						alt3=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}
					switch (alt3) {
						case 1 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:30: type= 'int'
							{
							type=(Token)match(input,39,FOLLOW_39_in_decl505);  
							stream_39.add(type);

							}
							break;
						case 2 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:43: type= 'float'
							{
							type=(Token)match(input,36,FOLLOW_36_in_decl511);  
							stream_36.add(type);

							}
							break;
						case 3 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:58: type= 'string'
							{
							type=(Token)match(input,43,FOLLOW_43_in_decl517);  
							stream_43.add(type);

							}
							break;

					}

					char_literal11=(Token)match(input,29,FOLLOW_29_in_decl520);  
					stream_29.add(char_literal11);

					// AST REWRITE
					// elements: ID, type, 40
					// token labels: type
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 57:77: -> ^( DECL ID $type 'print' )
					{
						// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:57:80: ^( DECL ID $type 'print' )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_type.nextNode());
						adaptor.addChild(root_1, stream_40.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:14: 'read' 'print' ID ':' (type= 'int' |type= 'float' |type= 'string' ) ';'
					{
					string_literal12=(Token)match(input,42,FOLLOW_42_in_decl548);  
					stream_42.add(string_literal12);

					string_literal13=(Token)match(input,40,FOLLOW_40_in_decl550);  
					stream_40.add(string_literal13);

					ID14=(Token)match(input,ID,FOLLOW_ID_in_decl552);  
					stream_ID.add(ID14);

					char_literal15=(Token)match(input,27,FOLLOW_27_in_decl554);  
					stream_27.add(char_literal15);

					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:36: (type= 'int' |type= 'float' |type= 'string' )
					int alt4=3;
					switch ( input.LA(1) ) {
					case 39:
						{
						alt4=1;
						}
						break;
					case 36:
						{
						alt4=2;
						}
						break;
					case 43:
						{
						alt4=3;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						throw nvae;
					}
					switch (alt4) {
						case 1 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:37: type= 'int'
							{
							type=(Token)match(input,39,FOLLOW_39_in_decl559);  
							stream_39.add(type);

							}
							break;
						case 2 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:50: type= 'float'
							{
							type=(Token)match(input,36,FOLLOW_36_in_decl565);  
							stream_36.add(type);

							}
							break;
						case 3 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:65: type= 'string'
							{
							type=(Token)match(input,43,FOLLOW_43_in_decl571);  
							stream_43.add(type);

							}
							break;

					}

					char_literal16=(Token)match(input,29,FOLLOW_29_in_decl574);  
					stream_29.add(char_literal16);

					// AST REWRITE
					// elements: ID, type, 40, 42
					// token labels: type
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleTokenStream stream_type=new RewriteRuleTokenStream(adaptor,"token type",type);
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 58:84: -> ^( DECL ID $type 'read' 'print' )
					{
						// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:58:87: ^( DECL ID $type 'read' 'print' )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECL, "DECL"), root_1);
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_1, stream_type.nextNode());
						adaptor.addChild(root_1, stream_42.nextNode());
						adaptor.addChild(root_1, stream_40.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class decllist_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decllist"
	// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:1: decllist : ( decl )* -> ^( DECLLIST ( decl )* ) ;
	public final XParser.decllist_return decllist() throws RecognitionException {
		XParser.decllist_return retval = new XParser.decllist_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope decl17 =null;

		RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");

		try {
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:9: ( ( decl )* -> ^( DECLLIST ( decl )* ) )
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:15: ( decl )*
			{
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:15: ( decl )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==ID||LA6_0==40||LA6_0==42) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:15: decl
					{
					pushFollow(FOLLOW_decl_in_decllist600);
					decl17=decl();
					state._fsp--;

					stream_decl.add(decl17.getTree());
					}
					break;

				default :
					break loop6;
				}
			}

			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 60:22: -> ^( DECLLIST ( decl )* )
			{
				// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:25: ^( DECLLIST ( decl )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLLIST, "DECLLIST"), root_1);
				// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:60:36: ( decl )*
				while ( stream_decl.hasNext() ) {
					adaptor.addChild(root_1, stream_decl.nextTree());
				}
				stream_decl.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decllist"


	public static class expr_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expr"
	// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:1: expr : multexpr ( ( '+' ^| '-' ^) multexpr )* ;
	public final XParser.expr_return expr() throws RecognitionException {
		XParser.expr_return retval = new XParser.expr_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal19=null;
		Token char_literal20=null;
		ParserRuleReturnScope multexpr18 =null;
		ParserRuleReturnScope multexpr21 =null;

		CommonTree char_literal19_tree=null;
		CommonTree char_literal20_tree=null;

		try {
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:5: ( multexpr ( ( '+' ^| '-' ^) multexpr )* )
			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:15: multexpr ( ( '+' ^| '-' ^) multexpr )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_multexpr_in_expr627);
			multexpr18=multexpr();
			state._fsp--;

			adaptor.addChild(root_0, multexpr18.getTree());

			// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:24: ( ( '+' ^| '-' ^) multexpr )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( ((LA8_0 >= 23 && LA8_0 <= 24)) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:25: ( '+' ^| '-' ^) multexpr
					{
					// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:25: ( '+' ^| '-' ^)
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==23) ) {
						alt7=1;
					}
					else if ( (LA7_0==24) ) {
						alt7=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 7, 0, input);
						throw nvae;
					}

					switch (alt7) {
						case 1 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:26: '+' ^
							{
							char_literal19=(Token)match(input,23,FOLLOW_23_in_expr631); 
							char_literal19_tree = (CommonTree)adaptor.create(char_literal19);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal19_tree, root_0);

							}
							break;
						case 2 :
							// /home/fabian/Compilerbau/combau/ÜB-Praxis-Antlr Baumgrammatiken - Leer/src/de/dhbw/compiler/antlrxtreegrammar/X.g:63:33: '-' ^
							{
							char_literal20=(Token)match(input,24,FOLLOW_24_in_expr636); 
							char_literal20_tree = (CommonTree)adaptor.create(char_literal20);
							root_0 = (CommonTree)adaptor.becomeRoot(char_literal20_tree, root_0);

							}
							break;

					}
